--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
         <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>About Me</title>
             <link rel="stylesheet" href="screenstyle.css">
             <link rel="stylesheet" href="printstyle.css" media="print">
@@ -75,5 +77,4 @@
             </tr>
         </tbody>
     </table>
- 
 </html>
